--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="results">Results</string>
     <string name="profile">Profile</string>
     <string name="help">Help</string>
+    <string name="strength">Strength</string>
+    <string name="speed">Speed</string>
+    <string name="endurance">Endurance</string>
+    <string name="agility">Agility</string>
+    <string name="military_skills">Military skills</string>
+    <string name="search">Search</string>
 </resources>
