--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="agility">Agility</string>
     <string name="military_skills">Military skills</string>
     <string name="search">Search</string>
+    <string name="filter">Filter</string>
+    <string name="clear">Clear</string>
+    <string name="apply">Apply</string>
+    <string name="exercise">Exercise%s</string>
+    <string name="add_to_complex">Add to complex</string>
 </resources>
