--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="norms">Norms</string>
+    <string name="results">Results</string>
+    <string name="profile">Profile</string>
+    <string name="help">Help</string>
+    <string name="exercise">Exercise%s</string>
+    <string name="strength">Strength</string>
+    <string name="speed">Speed</string>
+    <string name="endurance">Endurance</string>
+    <string name="agility">Agility</string>
+    <string name="military_skills">Military skills</string>
+</resources>
